<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#bdbdbd"
    android:padding="6dip"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/pagoTitulo"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Space
        android:layout_width="10dp"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/detallePago"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/detallePago"
                android:id="@+id/detallePagoInfo"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/montoPago"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/montoPago"
                android:id="@+id/detallePagoMonto"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaPago"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaPago"
                android:id="@+id/detalleFecha_Pago"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>